--- a/wordCounter.html
+++ b/wordCounter.html
@@ -12,6 +12,7 @@
     <div id=app>
         <navigation></navigation>
         <word-counter></word-counter>
+        <my-footer></my-footer>
     </div>
     <script type=text/javascript src=/static/js/manifest.js></script>
     <script type=text/javascript src=/static/js/vendor.js></script>
