--- a/wordCounter.html
+++ b/wordCounter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>Eman Ayyad's Portfolio</title>
+    <title>Eman Ayyad's word counter</title>
     <link href=/static/css/app.css rel=stylesheet>
 </head>
 
