--- a/wordCounter.html
+++ b/wordCounter.html
@@ -5,6 +5,7 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>Eman Ayyad's word counter</title>
+    <link rel="icon" href="favicon.png" type="image/gif">
     <link href=/static/css/app.css rel=stylesheet>
 </head>
 
