--- a/cryptocurrency.html
+++ b/cryptocurrency.html
@@ -8,7 +8,7 @@
     <link href=/static/css/app.css rel=stylesheet>
 </head>
 
-<body>
+<body class="cryptocurrency-page">
     <div id=app>
         <navigation></navigation>
         <cryptocurrency></cryptocurrency>
